# watchr

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  READMEold.md  docker-compose.yaml  makefile  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml  docker-publish.yml  release-drafter.yml  stale.yml  test-and-build.yml
common/: version-bump.sh
src/: __main__.py  common.py  config.py  database.py  file_watcher.py  main.py  models.py
src/apple_health/: models.py  service.py  utils.py
src/strong_app/: models.py  service.py
tests/: test_apple_health_utils.py  test_common.py
