[tool.poetry]
name = "etl_strong_app"
version = "0.1.0"
description = "Picking up and processing files for personal finances and accounting"
authors = ["Bryan Jenks <bryan@bryanjenks.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
loguru = "^0.6.0"
watchdog = "^2.1.9"
psycopg2-binary = "^2.9.5"
fastapi = "^0.95.1"
FastAPI-SQLAlchemy = "^0.2.1"
pydantic = "^1.10.7"
alembic = "^1.10.4"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
